--- a/ThesisReport/reference.bib
+++ b/ThesisReport/reference.bib
@@ -269,3 +269,96 @@
  school={University of Cambridge}
 }
 
+@inproceedings{hertz00,
+ author = {Hertzmann, Aaron and Perlin, Ken},
+ title = {Painterly Rendering for Video and Interaction},
+ booktitle = {Proceedings of the 1st International Symposium on Non-photorealistic Animation and Rendering},
+ series = {NPAR '00},
+ year = {2000},
+ pages = {7--12},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+} 
+
+@article{dhon89,
+ title={Structure from stereo-a review},
+ author={Dhond, Umesh R and Aggarwal, Jake K},
+ journal={Systems, Man and Cybernetics, IEEE Transactions on},
+ volume={19},
+ number={6},
+ pages={1489--1510},
+ year={1989},
+ publisher={IEEE}
+}
+
+@article{bro03,
+ title={Advances in computational stereo},
+ author={Brown, Myron Z and Burschka, Darius and Hager, Gregory D},
+ journal={Pattern Analysis and Machine Intelligence, IEEE Transactions on},
+ volume={25},
+ number={8},
+ pages={993--1008},
+ year={2003},
+ publisher={IEEE}
+}
+@article{boy01,
+ title={Fast approximate energy minimization via graph cuts},
+ author={Boykov, Yuri and Veksler, Olga and Zabih, Ramin},
+ journal={Pattern Analysis and Machine Intelligence, IEEE Transactions on},
+ volume={23},
+ number={11},
+ pages={1222--1239},
+ year={2001},
+ publisher={IEEE}
+}
+
+@article{boy04,
+ title={An experimental comparison of min-cut/max-flow algorithms for energy minimization in vision},
+ author={Boykov, Yuri and Kolmogorov, Vladimir},
+ journal={Pattern Analysis and Machine Intelligence, IEEE Transactions on},
+ volume={26},
+ number={9},
+ pages={1124--1137},
+ year={2004},
+ publisher={IEEE}
+}
+
+@inproceedings{kla06,
+ title={Segment-based stereo matching using belief propagation and a self-adapting dissimilarity measure},
+ author={Klaus, Andreas and Sormann, Mario and Karner, Konrad},
+ booktitle={Pattern Recognition, 2006. ICPR 2006. 18th International Conference on},
+ volume={3},
+ pages={15--18},
+ year={2006},
+ organization={IEEE}
+}
+
+@inproceedings{kim05,
+ title={A dense stereo matching using two-pass dynamic programming with generalized ground control points},
+ author={Kim, Jae Chul and Lee, Kyoung Mu and Choi, Byoung Tae and Lee, Sang Uk},
+ booktitle={Computer Vision and Pattern Recognition, 2005. CVPR 2005. IEEE Computer Society Conference on},
+ volume={2},
+ pages={1075--1082},
+ year={2005},
+ organization={IEEE}
+}
+
+@inproceedings{sun11,
+ title={Stereo matching with reliable disparity propagation},
+ author={Sun, Xun and Mei, Xing and Jiao, Shaohui and Zhou, Mingcai and Wang, Haitao},
+ booktitle={3D Imaging, Modeling, Processing, Visualization and Transmission (3DIMPVT), 2011 International Conference on},
+ pages={132--139},
+ year={2011},
+ organization={IEEE}
+}
+
+@inproceedings{mart01,
+ title={A database of human segmented natural images and its application to evaluating segmentation algorithms and measuring ecological statistics},
+ author={Martin, David and Fowlkes, Charless and Tal, Doron and Malik, Jitendra},
+ booktitle={Computer Vision, 2001. ICCV 2001. Proceedings. Eighth IEEE International Conference on},
+ volume={2},
+ pages={416--423},
+ year={2001},
+ organization={IEEE}
+}
+
