--- a/ThesisReport/thesis.tex
+++ b/ThesisReport/thesis.tex
@@ -51,11 +51,28 @@ many years now and there are many solutions proposed by researchers to address t
 accuracy and in real-time for practical applications still remains a challenging task. {\newline}
 
 % Motivation - Objective - Contributions %
+\section {Research Objective}
+
 Our motivation in this research is to study the possibility and usability of combining stereo vision approaches with AR systems considering the most important constraints that AR systems
-normally come across, i.e., we would like to see whether using stereo vision
-for obtaining 3D position of objects is potentially a good approach in an augmented reality application. A particular application that we are interested in for
-our study is a 3D mobile augmented reality system in urban settings. In order to pursue our goal for this research, we have designed and implemented a testbed for evaluation of
-stereo matching solutions based on specific criteria which will be thoroughly described in the next chapters.
+normally come across. Therefore, we have tried to propose an evaluation scheme that enables us to examine whether using stereo vision
+for obtaining 3D position of objects is potentially a good approach in an augmented reality application. A particular application that we have been aiming for in
+this study, is a 3D mobile augmented reality system in urban settings. 
+In other words, our fundamental research question is: \newline
+
+\begin{quote}
+\textbf{"Can combination of stereo vision with augmented reality meet the requirements of an AR system?"} \newline
+\end{quote}
+In order to find the answer to this question, some other questions are raised:
+\begin{quote}
+\textbf {How can we evaluate stereo correspondence in augmented reality framework? What are the important factors we need to consider for this type of evaluation?}
+\textbf {In a combination of augmented reality with stereo vision, what would be considered as {\it accurate} depth result?}
+\textbf {What is the standard stereo acuity for human visual system? How would it affect an AR system?}
+\textbf {What is the requirement to provide the real-time sense for the user in an AR system?}
+\end{quote}
+
+In order to pursue our goal for this research, we have designed and implemented a testbed for evaluation of
+stereo matching solutions based on specific criteria which will be thoroughly described later in this report.
+
 
 In the AR system of our interest, the depth map generated from two or multiple camera views will be used as the depth source to determine the position of the objects in the scene when
 overlaying virtual objects at different locations and depth levels in the real environment. For our research, we decided to narrow down our study to the effect of using stereo vision
@@ -63,7 +80,7 @@ on two of the most important constraints of an AR system mentioned earlier; {\it
 Human perception of depth can vary depending on the environment and under different circumstances. Many studies have focused on the evaluation of human perception of depth within different frameworks
 and in different applications, such as virtual reality, and augmented reality which have recently attracted more attention \cite{wann95,dras96,liv05,jer05,swa07,kru10}.
 These studies show that the viewer perception of depth
-is inversely proportional to his distance from the object \cite{kru10,swa07,jer05,liv05}. For instance, in \cite{swa07} some experiments are designed to study and evaluate human
+is inversely proportional to his/her distance from the object \cite{kru10,swa07,jer05,liv05}. For instance, in \cite{swa07} some experiments are designed to study and evaluate human
 perception of distance, which is the absolute depth of the objects from the observer, for an outdoor augmented reality application in urban settings. 
 However, what we are more interested in for this research, is the human perception of relative depth in stereo vision, which is the ability to perceive and distinguish 
 the depth of the objects relative to each other. This is known as {\it Stereoscopic Acuity} in binocular vision, which is the smallest depth difference between two points 
@@ -74,8 +91,8 @@ objects in human binocular vision based on their distance from the observer.
 
 Moreover, providing real-time interaction in an AR system for the user requires the processing time and update rate of the whole system to keep up ideally with the standard video frame rate, 
 between 24fps and 
-30fps or higher. However, studies show that in practice to build a reasonable interactive augmented world the processing rate should not be less than half of the video frame rate  \textbf{NOTE: Search for more
-valid reference} \cite{spe}. 
+30fps, or higher. 
+However, studies show that in practice to build a reasonable interactive augmented world the processing rate should not be less than half of the video frame rate \cite{hertz00}. 
 There are different approaches to speed up a system. Acceleration of a system is possible in two ways:
 \begin{enumerate}
 \item Using more advanced technology and hardware
@@ -93,7 +110,7 @@ depth values.
 This idea which originates from having a more efficient design for gaining speed up, 
 also addresses the computational resources used during the process and may lead to significant system speed up.
 It is also known that distinctive features such as {\it edges}, either in RGB or depth, in a scene play an important role in many computer vision applications, such as object detection and 
-tracking, determination of a set of reliable correspondences to build a 3D model that helps with better perception of object locations in 3D space \cite{sze11}.
+tracking, determination of a set of reliable correspondences to build a 3D model that helps with better perception of object locations in 3D space \cite{mart01,sze11}.
 
 Therefore, in an augmented reality application, wrong depth results, especially in those regions, which will lead to erroneous registration of virtual and real objects, 
 can be perceived and picked out easier by the human eyes. This may cause poor performance of the system and possibly faulty interaction between 
@@ -110,9 +127,9 @@ regions can lead to more accurate combination of virtual and real objects in the
 \newline
 
 Since our objective in this research is to study the combination of stereo vision and augmented reality systems, we have surveyed some of the existing approaches in stereo matching and the
-related geometry for 3D reconstruction from stereo pairs. We will go through the related works and background more in the next chapter. 
+related geometry for 3D reconstruction from stereo pairs. We will go through these concepts and the related works in the field more in the next chapter. 
 
-To evaluate our proposition in this research, we have decided to assess two stereo matching algorithms. These algorithms are as follow:
+To evaluate our proposition in this research, we have decided to assess two stereo matching algorithms. These algorithms are as follows:
 \begin{enumerate}
 \item Semi-global block matching
 \item On building an accurate stereo matching system on graphics hardware \cite{mei11}
@@ -123,20 +140,22 @@ and has been implemented in Open Source Computer Vision Library (OpenCV) \cite{s
 On the other hand, there was no source code available for the second algorithm. For this reason, we have used our own implementation of this solution in the evaluation process, both on CPU and GPU.
 
 The reason we have chosen these two algorithms is that the first method, SGBM, has shown to generate acceptable results within 1-2 seconds on typical test images \cite{hir08} and 
-its implementation in OpenCV library has also made its usage more common and easier in applications. The second algorithm, also known as ADCensus, was chosen since it has been designed in a way that
-can be ported to graphics processing unit for acceleration and according to Middlebury evaluation benchmark, it is currently ranked as one of the top algorithms for stereo matching \cite{mideval}.
+its implementation in OpenCV library has also made its usage more common and easier in applications. The second algorithm, also known as ADCensus \cite{mei11}, was chosen since 
+it has been designed in a way that
+can be ported to graphics processing unit (GPU) for acceleration and according to the Middlebury evaluation benchmark \cite{mideval}, it is currently ranked as one of the top algorithms for 
+stereo matching regardless of the running time.
 It should also be noted that this solution uses better and more sophisticated approaches to do stereo matching which makes it superior to many other solutions. \newline
-For our evaluation, we have used KITTI stereo training dataset as our stereo inputs \cite{kitti}. 
-These images are more realistic and they have been taken from outdoor scenes under different circumstances 
-and the ground truth disparity map is also provided for each of them which is useful in the evaluation process. KITTI Vision project also provides a benchmark and an evaluation table
+For our evaluation, we have used KITTI stereo training dataset as our stereo image data \cite{kitti}. 
+Images in this dataset are more realistic since they have been taken from outdoor scenes under different circumstances 
+and the ground truth disparity map is also provided for each of them, which is useful in the evaluation process. KITTI Vision project also provides a benchmark and an evaluation table
 for different stereo
-matching algorithms assessed in real outdoor scenes which makes it more relevant and applicable to our interest in this research. 
-AdCensus currently does not exist in their evaluation table which is another reason for us to use it in our evaluation.
+matching algorithms assessed in real outdoor scenes which makes it more relevant and applicable to an augmented reality application. 
+AdCensus currently does not exist in the KITTI evaluation table which is another reason for us to use it in our evaluation.
 
 
 \chapter{Background and Related Works}
 Stereo vision is the concept of viewing a scene (object) in the real world from slightly different
-viewpoints at the same time which results in stereo images. Using computer vision techniques, it is possible to extract depth information from stereo
+viewpoints at the same time which results in stereo image pairs. Using computer vision techniques, it is possible to extract depth information from stereo
 images. This process is called {\it Stereo Matching} or {\it Stereo Correspondence} in computer vision,
 which in fact leads to the construction of a
 3D model of a scene from two or multiple views by finding corresponding pixels and therefore, their spatial movement within various views of the same scene \cite{sze11}.
@@ -167,10 +186,10 @@ its correspondence and their projection in 3D space are all coplanar with camera
 the rays passing through P' and the left camera centre. Therefore, the point P'' would lie somewhere on the line created by the intersection of $\pi$ and the right image plane.
 This line is in fact the back-projection in the right image plane of the ray passing through P'. This line is called the {\it epipolar line} corresponding to P'. Hence, in a stereo matching algorithm
 we only need to search this line rather than the whole image in order to find the corresponding point for point P'.
-In order to better understand the principal idea behind stereo matching algorithms, some fundamental concepts in epipolar geometry must be fist introduced. 
+In order to better understand the principal idea behind stereo matching algorithms, some fundamental concepts in epipolar geometry must be first introduced. 
 Here, we explain these concepts briefly and an illustration of them is also provided in figure \textbf{FIGURE NUMER}.
 \newline
-The fundamental entities in epipolar geometry are as follow: \cite{hart2000}
+The fundamental entities in epipolar geometry are as follows: \cite{hart2000}
 \begin{itemize}
 \item The \textbf{epipole}: The point of intersection between the baseline and each of the image planes is called the epipole. In other words, each epipole can be referred to as the image of one of
 the camera centres in the other image plane.
@@ -193,8 +212,8 @@ it is better to have the input image pairs warped first, i.e., {\it rectified}. 
 rotate both cameras first so that their optical axis, the line passing through the camera centre which is perpendicular to the image plane, are parallel to each other; 
 i.e., their optical axis is perpendicular to the baseline. Furthermore, it is necessary to have the camera's {\it y} axis perpendicular to the optical axis. After these two steps,
 corresponding epipolar lines will be horizontal which constrains the process of searching for the corresponding points. 
-In this model, the disparity for points at infinity is also equal to 0.\cite{sze11}
-The relation between particular geometrical parameters through which the depth of a certain point in 3D space is obtained, can be clearly defined base on the aforementioned rectified model. 
+In this model, the disparity for points at infinity is also equal to 0 \cite{sze11}.
+The relation between particular geometrical parameters through which the depth of a certain point in 3D space is obtained, can be clearly defined based on the aforementioned rectified model. 
 This relation is presented as follows:
 \begin{center}
 $d = f\frac{B}{Z}$
@@ -207,7 +226,7 @@ ${P}''_{x}={P}'_{x}+d(x,y)$
 ${P}''_{y} = {P}'_{y}$
 \end{center}
 Therefore, based on the aforementioned formulas, the depth of points in 3D space can be easily calculated after finding the corresponding pixels in multiple views and consequently their
-disparities. \cite{bol87,oku93,sch02}
+disparities \cite{bol87,oku93,sch02}.
 
 \section{Stereo Correspondence Algorithms}
 A survey of the field shows that the algorithms which address stereo correspondence problem can be roughly divided into two main classes \cite{sch02}. These classifications are commonly known as:
@@ -218,14 +237,19 @@ A survey of the field shows that the algorithms which address stereo corresponde
 
 In this section, we are going to briefly describe the important specifications of the algorithms belonging to each of these two categories.
 \subsection{Sparse Correspondence Algorithms}
-Sparse correspondence algorithms, also known as feature-based algorithms, are the early stereo matching methods. In this type of methods, particular features in an image, such as edge 
-points, line segments, or other significant features are extracted and therefore, the search for corresponding pixels is only applied to these regions. Consequently, algorithms of this
-type result in a sparse disparity map \cite{matt89,hsie92, sze11}. The introduction of feature-based algorithms has mainly been motivated by three important reasons \cite{sze11}:
+Sparse correspondence algorithms, also known as feature-based algorithms, are the early stereo matching methods. In the 1980s, this class of algorithms receieved considerable attention by
+many researchers in computer vision \cite{dhon89}.
+In this type of methods, particular features in an image, such as edges, 
+points, line segments, or other distinctive features are extracted and therefore, the search for corresponding pixels is only applied to these regions. Consequently, algorithms of this
+type result in a sparse disparity map \cite{matt89,hsie92, sze11}. The introduction of feature-based algorithms has mainly been motivated by three important factors \cite{bro03,sze11}:
 \begin{itemize}
 \item Limitation in computational resources.
-\item Constraint of the searching area in order to find more reliable matches.
+\item Constraint of the search area in order to find more reliable matches.
 \item Images with different illumination, where edges or some other particular features preserves their photometric properties and therefore, are the only regions reliable enough to 
 be used for correspondence search.
+
+However, the requirement of having dense depth maps for many applications and also the emergence of efficient {\it dense correspondence algorithms}, have diverted the attention away
+from this class of algorithms in the last 20 years.
 \end{itemize}
 
 \subsection{Dense Correspondence Algorithms}
@@ -241,7 +265,7 @@ disparities to pixels:
 \item Global approaches
 \end{enumerate}
 
-\textbf{Local Approaches}
+\subsubsection{Local Approaches}
 \newline
 Local methods tend to find the disparity of each pixel based on its local neighboring pixels. In
 other words, the disparity of a pixel is calculated in a finite window, based on the intensity values
@@ -259,17 +283,17 @@ finding the correspondences of pixels in the image.
 
 However, a significant advantage of using local approaches is their high speed in finding disparity results.\newline
 
-\textbf {Global Approaches}
+\subsubsection{Global Approaches}
 \newline
 Unlike local approaches, in global methods the disparity of a pixel depends on the information in
 the whole image. Global methods usually contain an optimization step of a global energy
-function. In this class of algorithms, an optimal disparity value for each pixel is sought that lead to minimization of a global cost
-function that normally combines a data term with an explicit smoothness assumption in form of \cite{roy98,bobi99,boyk01}:
+function\cite{roy98,bobi99,boyk01}. In this class of algorithms, an optimal disparity value for each pixel is sought that leads to minimization of a global cost
+function that normally combines a data term with an explicit smoothness assumption in form of:
 
 \begin{center}
 $E(d)=E_{data}(d)+\lambda E_{smooth}(d)$
 \end{center}
-The term $E_{data}$ normally represent the difference in the intensity of the corresponding pixels and is denoted as follows:
+The term $E_{data}$ normally represents the difference in the intensity of the corresponding pixels and is denoted as follows:
 
 \begin{center}
 $E_{data}(d) = \sum_{(x,y)}C(x,y,d(x,y))$
@@ -280,10 +304,32 @@ between the intensity of the corresponding pixels in two images \cite{sch02}.
 
 Due to the existence of the smoothness term, $E_{smooth}$, neighboring pixels tend to have similar disparity values. $\lambda$ is also a weight factor that can vary depending 
 on the implementation of the global function in the algorithm \cite{sze11}.
+In order to find the minimum of the global function, common approaches in computer science have proved to be particularly useful. 
+To name some of these approaches, we can refer to dynamic programming, graph cut, and belief propagation. Many researchers have studied and addressed the problem of stereo matching
+by applying one of these approaches \cite{sch02,boy01,boy04,kim05,sun11}.
+
+The major drawback of global approaches is normally their high usage of computational resources and their low speed. However, 
+they usually result in more accurate disparity values \cite{hirsch02,sze11}. 
+
+It is also worthwhile to mention that in the past 12 years, another group of algorithms have emerged which cannot be explicitly classified in any of the previously mentioned groups.
+This group of methods, which are known as {\it Segmentation-based techniques}, first segment the image into regions and then, rather than searching for correspondences per pixel,
+attempt to find the corresponding disparity for each region. A more detailed review of these methods can be found in \cite{sze11}.
+
+\subsection{Edge Detection}
+
+As mentioned earlier in the "Introduction", salient {\it edges} in the scene are one of the important features 
+that can be used in many applications, such as object detection, image stitching, or 3D model reconstruction \cite{sze11}.
+Due to their importance in defining the boundaries of objects and also their correspondence to occlusion occurance and depth discontinuities in 3D, we have also 
+masked our input data based on the detected edges in the scene. 
+In order to exctract this feature in the images, i.e. edges, we have used 
+specific algorithms. Here, we will describle how it is possible to find the most salient edges in the scene using vision techniques and how closely it matches the human perception.
 
 
-The major drawback of global approaches is the high usage of computational resources and the low speed in finding the matches. However, they usually result in more accurate disparity values
-\cite{hirsch02,sze11}. 
+In an image, the intersection of regions with different texture, color, or intensity define the edges; i.e. edges occure where there is a {\it dramatic variation of intensity} \cite{sze11}.
+Therefore, a reasonable approach to detect the edges in an image would be calculating the gradient of the intensity image. However, since an image normally contains a certain amount of
+noise which intensifies at higher frequencies, taking the derivatives of the image which makes high frequency signals more prominent to others, can lead to significant noise amplification.
+Therefore, it is better to reduce high frequencies prior to applying any edge detection approach. 
+There are a variety of low-pass filters for image smoothing (blurring), e.g. {\it 
 
 
 
